--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,32 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8" />
+  <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
   <title>Angdemo</title>
   <base href="/">
-
-  
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-
-  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="image/x-icon" rel="shortcut icon" href="assets/images/favicon.ico" />
-  <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap-datetimepicker.css" />
+  <link type="image/x-icon" rel="icon" href="assets/images/favicon.ico" />
   <link type="text/css" rel="stylesheet" href="assets/css/font-awesome.min.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/jquery.bxslider.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/demo.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/flexslider.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/perfect-scrollbar.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/flaticon.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap-datetimepicker.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/select2.min.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap-tagsinput.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/bootstrap-multiselect.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/imageuploadify.min.css" />
   <link type="text/css" rel="stylesheet" href="assets/css/jquery.dataTables.min.css" />
   <link type="text/css" rel="stylesheet" href="assets/css/buttons.dataTables.min.css" />
   <link type="text/css" rel="stylesheet" href="assets/css/responsive.dataTables.min.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/sweetalert2.min.css" />
-  <link type="text/css" rel="stylesheet" href="assets/css/select2.min.css" />
-  
-  <script src="https://cdn.ckeditor.com/4.9.1/standard-all/ckeditor.js"></script>
-
+  <link type="text/css" rel="stylesheet" href="assets/node_modules/sweetalert2/dist/sweetalert2.min.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/perfect-scrollbar.css" />
+  <link type="text/css" rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
